fix sorting and text color in button on ios

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -90,6 +90,7 @@ button {
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
+    color: var(--background-white);
     font-family: inherit;
     background-color: var(--green);
     cursor: pointer;
